# ChangeLog for kde-base/kdelibs
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.264 2005/07/22 21:53:33 kloeri Exp $

  22 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
  kdelibs-3.3.2-r10.ebuild:
  Stable on ia64, bug 98735.

  22 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
  kdelibs-3.3.2-r10.ebuild:
  Stable on alpha, bug 98735.

  20 Jul 2005; Herbie Hopkins <herbs@gentoo.org> kdelibs-3.3.2-r10.ebuild:
  Stable on amd64 wrt bug #98735.

  20 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org>
  kdelibs-3.3.2-r10.ebuild:
  Stable on hppa. bug #98735

  20 Jul 2005; Hardave Riar <hardave@gentoo.org> kdelibs-3.3.2-r10.ebuild:
  Stable on mips, bug #98735

  20 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  kdelibs-3.3.2-r10.ebuild:
  Stable on sparc wrt #98735

  19 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  kdelibs-3.3.2-r10.ebuild:
  ppc stable, #98735

  19 Jul 2005; Markus Rothe <corsair@gentoo.org> kdelibs-3.3.2-r10.ebuild:
  Stable on ppc64 (bug #98735)

*kdelibs-3.3.2-r10 (18 Jul 2005)

  18 Jul 2005; Carsten Lohrke <carlo@gentoo.org>
  +files/post-3.3.2-kdelibs-kate.diff, +kdelibs-3.3.2-r10.ebuild:
  backup file permission leak in kate, #98735

  14 Jul 2005; Hardave Riar <hardave@gentoo.org> kdelibs-3.4.1-r1.ebuild:
  Keyworded ~mips

*kdelibs-3.4.1-r2 (10 Jul 2005)

  10 Jul 2005; Carsten Lohrke <carlo@gentoo.org>
  +files/kdelibs-3.4.1-kntlm.patch,
  +files/kdelibs-3.4.1-ktoolbar-crash.patch, +kdelibs-3.4.1-r2.ebuild:
  fix ntlm authentication, #98285 and konqueror crashes

  08 Jul 2005; Dan Armak <danarmak@gentoo.org>
  -files/post-3.2.3-kdelibs-dcop.patch,
  -files/post-3.2.3-kdelibs-dcopserver.patch,
  -files/post-3.2.3-kdelibs-htmlframes2.patch,
  -files/post-3.2.3-kdelibs-kcookiejar.patch,
  -files/post-3.2.3-kdelibs-kio.diff,
  -files/post-3.2.3-kdelibs-kioslave.patch,
  -files/post-3.2.3-kdelibs-kstandarddirs.patch,