@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/kdelibs-3.3.2-r9.ebuild,v 1.11 2005/07/08 23:20:48 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/kdelibs-3.3.2-r9.ebuild,v 1.12 2005/07/25 15:19:25 caleb Exp $
 
 inherit kde eutils flag-o-matic
 set-kdedir 3.3
@@ -23,7 +23,7 @@ IUSE="alsa arts cups doc ipv6 kerberos ldap spell ssl tiff"
 # kde.eclass has kdelibs in DEPEND, and we can't have that in here.
 # so we recreate the entire DEPEND from scratch.
 RDEPEND="arts? ( ~kde-base/arts-1.3.2 )
-	>=x11-libs/qt-3.3.3
+	$(qt_min_version 3.3.3)
 	app-arch/bzip2
 	>=dev-libs/libxslt-1.1.4
 	>=dev-libs/libxml2-2.6.6
